Fixed title line height on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,7 +10,7 @@
 
 .site-title {
     font-size: 45px;
-    line-height: 56px;
+    line-height: 45px;
     letter-spacing: -1px;
     margin-bottom: 0;
     
